Mon Nov  4 06:55:36 CET 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: remove the use of snprintf, and use
	  libxml2 string API instead.
	* configure.in libxslt/xsltconfig.h.in libxslt/xsltutils.c:
	  try to cope with architecture lacking some of the string functions,
	  reuse the trio ones compiled in libxml2 , should close #97113

Wed Oct 23 17:06:24 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* Makefile.am libxslt.spec.in doc/Makefile.am: cleaned up
	  the spec file and associated changes in the Makefiles.

Tue Oct 22 21:02:37 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: Forgot to check a pointer, fixes bug #96495

Tue Oct 22 20:53:10 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/keys.h: fixed include c.f. bug #96487
	* config.h.in:  Red Hat 8.0 induced change 

Mon Oct 21 20:56:31 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c libxslt/numbersInternals.h libxslt/xsltutils.[ch]:
	  fixed bug #78501 when using a non ascii character for the
	  number formatting grouping separator.
	* tests/docs/Makefile.am tests/docs/bug-95.xml
	  tests/general/Makefile.am tests/general/bug-95.*: added the
	  example in the regression tests for this case
	* libxslt/attributes.c: cleaning up a problem introduced in last
	  patch

Mon Oct 21 09:31:55 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* libxslt/attributes.c: fixed minor typo in a call to
	  xmlHasNsProp

Sun Oct 20 23:20:37 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* python/types.c: fixed bugs when passing result value tree
	  to Python functions.

Sun Oct 20 15:23:28 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* libxslt/win32config.h: mapped vsnprintf to _vsnprintf for the
	  MS runtime
	* xsltproc/xsltproc.c: mapped snprintf to _snprintf for the MS
	  runtime
	
Fri Oct 18 13:40:12 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.22
	* doc/*: upated and rebuilt the docs
