@@ -27,9 +27,9 @@ xsltproc \- command line xslt processor
          | \fB--debug\fR | \fB--novalid\fR | \fB--noout\fR | \fB--maxdepth \fIval\fR\fR
          | \fB--html\fR | \fB--docbook\fR | \fB--param \fIname\fR \fIvalue\fR\fR
          | \fB--stringparam \fIname\fR \fIvalue\fR\fR | \fB--nonet\fR | \fB--catalogs\fR
-         | \fB--xinclude\fR | \fB--profile\fR | \fB--dumpextensions\fR] [\fBstylesheet\fR]
-         | \fB--nowrite\fR | \fB--nomkdir\fR
-         [\fIfile1\fR] [\fIfile2\fR] [\fI....\fR]
+         | \fB--xinclude\fR | \fB--profile\fR | \fB--dumpextensions\fR | \fB--nowrite\fR
+         | \fB--nomkdir\fR] [\fBstylesheet\fR] [\fIfile1\fR] [\fIfile2\fR] [\fI....\fR]
+        
 .fi
 
 .SH "INTRODUCTION"
@@ -106,7 +106,7 @@ Do not use the Internet to fetch DTD's or entities.
 
 .TP
 \fB--catalogs\fR
-Use catalogs to resolve the location of external entities. This speeds DTD resolution. By having a catalog file point to a local version of the DTD, xsltproc does not have to use the Internet to fetch the DTD. xsltproc uses the catalog identified by the environmental variable \fBSGML_CATALOG_FILES\fR.
+Use the SGML catalog specified in \fBSGML_CATALOG_FILES\fR to resolve the location of external entities. By default, xsltproc looks for the catalog specified in \fBXML_CATALOG_FILES\fR. If that is not specified, it uses \fI/etc/xml/catalog\fR.
 
 .TP
 \fB--xinclude\fR
